--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "/src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "webpack-dev-server",
+    "serve": "webpack-dev-server --open",
     "build": "webpack"
   },
   "author": "zhangckcup",
@@ -21,6 +21,9 @@
     "html-webpack-plugin": "^4.2.0",
     "less": "^3.11.1",
     "less-loader": "^6.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
     "style-loader": "^1.2.0",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
